# ev_ads_cpp

./: .gitignore  CMakeLists.txt  README.md
config/: ev_ads_runtime.launch.xml
config/scenarios/: front_pedestrian_emergency.xml  front_sensor_lost.xml  imu_lean_in_curve.xml  mmwave_abnormal_low_confidence.xml
deploy/: README.md  ev_ads_boot.sh  install_deps.sh
deploy/systemd/: ev-ads.service
deploy/udev/: 99-ev-ads-cameras.rules
docs/: ble_protocol.md  camera_params.md  deploy_rk3588.md  env_lock.md  ev_ads_cpp_completion_report.md  model_selection_and_onnx_plan.md  optimization_suggestions.md  test_plan.md  wiring_imu.md
firmware/esp32c6_mmwave_ble/: README.md  platformio.ini
firmware/esp32c6_mmwave_ble/include/: ble_radar_server.h  project_config.h  radar_payload.h
firmware/esp32c6_mmwave_ble/libs/Seeed-mmWave-library/src/: SEEED_MR60BHA2.cpp  SEEED_MR60BHA2.h
firmware/esp32c6_mmwave_ble/src/: ble_radar_server.cpp  main.cpp  radar_payload.cpp
models/: README.md
ros2_ws/src/ev_ads_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/ev_ads_bringup/launch/: ev_ads_cpp_runtime.launch.xml  ev_ads_demo.launch.xml
ros2_ws/src/ev_ads_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ev_ads_interfaces/msg/: BlindSpotState.msg  DriverState.msg  MmWaveVital.msg  WarningCommand.msg
ros2_ws/src/ev_ads_runtime_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/ev_ads_runtime_cpp/config/: cameras.yaml  driver_monitor.yaml  fusion_long_ride.yaml  fusion_night.yaml  fusion_urban_day.yaml  imu.yaml  rear_fisheye.yaml
ros2_ws/src/ev_ads_runtime_cpp/include/ev_ads_runtime_cpp/: common.hpp  domain_types.hpp  event_store.hpp  fusion_core.hpp  onnx_yolo_detector.hpp  risk_fusion_core.hpp  risk_math.hpp  runtime_config.hpp  topics.hpp  types.hpp  yolo_onnx.hpp
ros2_ws/src/ev_ads_runtime_cpp/launch/: cpp_runtime.launch.xml
ros2_ws/src/ev_ads_runtime_cpp/msg/: BrakeCommand.msg  FrontRisk.msg  RiskState.msg  VehicleMotion.msg
ros2_ws/src/ev_ads_runtime_cpp/scenarios/: driver_drowsy.xml  driver_drowsy.yaml  front_pedestrian_emergency.yaml  front_sensor_lost.yaml  imu_lean_in_curve.yaml  mmwave_abnormal_low_confidence.yaml  rear_right_blindspot_turn.xml  rear_right_blindspot_turn.yaml
ros2_ws/src/ev_ads_runtime_cpp/src/: camera_capture_node.cpp  camera_node_cpp.cpp  driver_attention_node.cpp  driver_monitor_node_cpp.cpp  event_logger_node_cpp.cpp  event_recorder_node.cpp  event_store.cpp  front_node_cpp.cpp  front_risk_node.cpp  fusion_node_cpp.cpp  hmi_node_cpp.cpp  imu_motion_node.cpp  imu_node_cpp.cpp  mmwave_node_cpp.cpp  mmwave_vital_node.cpp  onnx_yolo_detector.cpp  rear_blind_spot_node.cpp  rear_node_cpp.cpp  risk_fusion_node.cpp  terminal_hmi_node.cpp  yolo_onnx.cpp
test/: CMakeLists.txt  test_common_and_fusion.cpp  test_event_store.cpp  test_model_loading.cpp  test_risk_math_and_fusion.cpp
test/scripts/: project_check.py
