<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ev_ads_bringup</name>
  <version>0.1.0</version>
  <description>EV-ADS C++ runtime 启动入口。</description>
  <maintainer email="ev-ads@example.com">EV-ADS Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ev_ads_runtime_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
